# django-datetime-utc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
datetimeutc/: Changelog  Changelog.md  __init__.py  fields.py
datetimeutc/tests/testapp/: tests.py
tests/: README.md  README.rst  conftest.py  settings.py
tests/testapp/: models.py  test_model.py  tests.py
tests/testapp/migrations/: 0001_initial.py
